force-app/main/default/objects/pse__Work_Queue__c/pse__Work_Queue__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__WorkQueueHelp</customHelpPage>
    <description>Manages scheduled and batch jobs for FinancialForce PSA in order to minimize the number of concurrent batch jobs, which counts against platform governor limits.</description>
    <label>Work Queue</label>
    <nameField>
        <displayFormat>WQ-{0}</displayFormat>
        <label>Work Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>