force-app/main/default/objects/pse__Work_Queue__c/fields/pse__Constructor_Data__c.field-meta.xml
<CustomField>
    <fullName>pse__Constructor_Data__c</fullName>
    <description>Used by the application to store information needed to construct more complex batchable classes that require input.</description>
    <label>Constructor Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>