force-app/main/default/objects/pse__Work_Queue__c/fields/pse__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>